--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
   <script type="application/javascript" src="lib/bullet.js"></script>
   <script type="application/javascript" src="lib/player.js"></script>
   <script type="application/javascript" src="lib/alien.js"></script>
+  <script type="application/javascript" src="lib/explosion.js"></script>
   <script type="application/javascript" src="lib/game.js"></script>
   <script type="application/javascript" src="lib/game_view.js"></script>
   <script type="application/javascript">
