--- a/index.html
+++ b/index.html
@@ -1,31 +1,7 @@
 <html>
   <head>
     <title>Space Invaders!</title>
-  <style>
-  body, html{
-    background-color: #EEEEEE;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-  }
-
-  #space-invaders {
-    display: block;
-    margin: auto;
-    position: absolute;
-
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-
-    image-rendering: optimizeSpeed;
-    image-rendering: -moz-crisp-edges;
-    image-rendering: -webkit-optimize-contrast;
-    image-rendering: optimize-contrast
-  }
-  </style>
-  
+    <link rel="stylesheet" href="./assets/styles/style.css" type="text/css" />
 
   </head>
 
@@ -47,7 +23,9 @@
   <script type="application/javascript" src="lib/game_view.js"></script>
   <script type="application/javascript">
     window.onload = function () {
-      Invaders.GameView.start();
+      
+        Invaders.GameView.start();
+      
     }
   </script>
   </body>
